plugins/MirOTR/ekhtml/testsuite/tstpages/01_stock_cases/special.suite
<!>
<!->
<!- >
<!FOOBAR BAZ QUUX!>
<!FOO
BAR
BAZ
>
<!FOO
BAR
BAZ>
